# MPI_Simple_Gene_Finder

./: .gitignore  CMakeLists.txt  README.md  chr21_gene.out.fasta  gene_finder_mpi  gene_finder_mpi.sbatch  run_gene_finder.sh  run_gene_finder_mpi.sbatch
data/: mutiple_dna.fasta  mutiple_dna_3.fasta
gene_judge/: gene_judge.cpp  gene_judge_filter_all.cpp  gene_judge_get_all.cpp
gene_judge/lib/: GeneRange.h  Sequence.cpp  Sequence.h  gene_judge.h
src/: gene_judge.cpp  gene_judge.h  main.cpp  main_mpi.cpp
src/lib/: Fasta.cpp  Fasta.h  GeneRange.h  InputParser.cpp  InputParser.h  Sequence.cpp  Sequence.h  gene_judge.h  orf_finder.cpp  orf_finder.h
